--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-react-app": "^3.0.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "^2.2.0",
     "uuid": "^3.3.2"
