--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "^2.2.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "vertical-timeline-component-for-react": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
