--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.2.1",
     "eslint-config-react-app": "^3.0.6",
     "react": "^16.7.0",
+    "react-bigpicture": "^1.0.18",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
