--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "^2.2.0",
+    "react-yandex-maps": "^3.0.2",
     "uuid": "^3.3.2",
     "vertical-timeline-component-for-react": "^1.0.6"
   },
