--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "culture-portal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kirilltk.github.io/CodeJam-5/",
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
